--- a/Src/Medoz.CommandLine.Demo/Medoz.CommandLine.Demo.csproj
+++ b/Src/Medoz.CommandLine.Demo/Medoz.CommandLine.Demo.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Medoz.CommandLine\Medoz.CommandLine.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +11,5 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Medoz.CommandLine" Version="0.1.0" />
-  </ItemGroup>
 
 </Project>
